# tirpc

./: .clang-tidy  .cppcheck  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: code-check.yml  cppcheck.yml
conf/: test_http_server.xml  test_tinypb_server.xml
example/: CMakeLists.txt  http_server.cpp  rpc_client.cpp  rpc_server.cpp  rpc_server.pb.cc  tinypb_client.cpp  tinypb_server.cpp  tinypb_server.pb.cc
example/coroutine/: CMakeLists.txt  coroutine.cpp
example/http_server/: CMakeLists.txt  http_server.cpp
example/http_server/conf/: http_server.xml  http_server.yml
example/http_server/root/: index.html
example/rpc/: CMakeLists.txt  rpc_benchmark.cpp  rpc_client.cpp  rpc_http_server.cpp  rpc_server.cpp  rpc_server.pb.h
example/rpc/conf/: http_server.yml  rpc_client.xml  rpc_client.yml  rpc_server.xml  rpc_server.yml
generator/: tirpc_generator.py
generator/template/: business_exception.h.template  conf.xml.template  interface.cc.template  interface.h.template  interface_base.cc.template  interface_base.h.template  main.cc.template  makefile.template  run.sh  server.cc.template  server.h.template  shutdown.sh  test_tinyrpc_client.cc.template  test_tirpc_client.cc.template
test/: CMakeLists.txt  test_raw_zk_util.cpp  test_raw_zookeeper.cpp  test_zookeeper.cpp
test/conf/: test_zookeeper.xml
tirpc/common/: config.cpp  config.hpp  const.hpp  error_code.hpp  lock_free_queue.hpp  log.cpp  log.hpp  md5.cpp  md5.hpp  msg_req.cpp  msg_req.hpp  mutex.cpp  mutex.hpp  mysql_instance.cpp  mysql_instance.hpp  start.cpp  start.hpp  string_util.cpp  string_util.hpp  thread_pool.cpp  thread_pool.hpp  util.cpp  util.hpp  zk_util.cpp  zk_util.hpp
tirpc/coroutine/: coctx.hpp  coroutine.cpp  coroutine.hpp  coroutine_hook.cpp  coroutine_hook.hpp  coroutine_pool.cpp  coroutine_pool.hpp  memory.cpp  memory.hpp
tirpc/net/: abstract_codec.hpp  abstract_dispatcher.hpp  address.cpp  address.hpp  byte.hpp  fd_event.cpp  fd_event.hpp  reactor.cpp  reactor.hpp  timer.cpp  timer.hpp
tirpc/net/base/: address.cpp  address.hpp  byte_array.hpp  endian.hpp  fd_event.cpp  fd_event.hpp  reactor.cpp  reactor.hpp  socket.cpp  socket.hpp  timer.cpp  timer.hpp
tirpc/net/http/: http_codec.cpp  http_codec.hpp  http_define.cpp  http_define.hpp  http_dispatcher.cpp  http_dispatcher.hpp  http_request.hpp  http_response.hpp  http_server.cpp  http_server.hpp  http_servlet.cpp  http_servlet.hpp
tirpc/net/rpc/: rpc_async_channel.cpp  rpc_async_channel.hpp  rpc_channel.cpp  rpc_channel.hpp  rpc_closure.hpp  rpc_codec.cpp  rpc_codec.hpp  rpc_controller.cpp  rpc_controller.hpp  rpc_data.hpp  rpc_dispatcher.cpp  rpc_dispatcher.hpp  rpc_server.cpp  rpc_server.hpp
tirpc/net/service_register/: none_service_register.cpp  none_service_register.hpp  zk_service_register.cpp  zk_service_register.hpp
tirpc/net/tcp/: abstract_codec.hpp  abstract_data.hpp  abstract_dispatcher.hpp  abstract_service_register.hpp  abstract_slot.hpp  io_thread.cpp  io_thread.hpp  load_balance.cpp  load_balance.hpp  service_register.cpp  service_register.hpp  tcp_buffer.cpp  tcp_buffer.hpp  tcp_client.cpp  tcp_client.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_time_wheel.cpp  tcp_connection_time_wheel.hpp  tcp_server.cpp  tcp_server.hpp
tirpc/net/tinypb/: tinypb_codec.cpp  tinypb_codec.hpp  tinypb_data.hpp  tinypb_rpc_async_channel.cpp  tinypb_rpc_async_channel.hpp  tinypb_rpc_channel.cpp  tinypb_rpc_closure.hpp  tinypb_rpc_controller.cpp  tinypb_rpc_dispatcher.cpp  tinypb_rpc_dispatcher.hpp
tools/: auto_benchmark.sh  rpc_benchmark.sh
tools/py/: analyze_results.py  analyze_rpc_result.py
